<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LEDRacer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="txt_score">Score:</string>
    <string name="text_retry"><u>Retry</u></string>
    <string name="text_menu"><u>Menu</u></string>
    <string name="txt_led"><u>LED</u></string>
    <string name="txt_racer"><u><b>Racer</b></u></string>
    <string name="txt_level">Level:</string>
    <string name="txt_info_choose_lvl">Choose one out of billion levels!</string>
    <string name="txt_info_starting_game">Starting level %d ...</string>
    <string name="txt_info_connection_troubles">Unable to connect to %s</string>
    <string name="txt_info_no_level_entered">Please enter a level first!</string>
    <string name="txt_info_illegal_level">You mean infinity?</string>
    <string name="txt_info_device_not_found">Trouble finding bluetooth device!</string>
    <string name="title_activity_settings"><u>Settings</u></string>
    <string name="txt_settings_clear_database"><u>Reset History</u></string>
    <string name="txt_settings_btdevice_error">Trouble finding bluetooth devices!</string>
</resources>